@@ -1392,7 +1392,8 @@ void DOSBOX_SetupConfigSections(void) {
     const char *mt32reverbLevels[] = {"0", "1", "2", "3", "4", "5", "6", "7", nullptr};
     const char* gustypes[] = { "classic", "classic37", "max", "interwave", nullptr };
     const char* sbtypes[] = { "sb1", "sb2", "sbpro1", "sbpro2", "sb16", "sb16vibra", "gb", "ess688", "ess1688", "reveal_sc400", "none", nullptr };
-    const char* oplmodes[]={ "auto", "cms", "opl2", "dualopl2", "opl3", "opl3gold", "none", "hardware", "hardwaregb", "esfm", nullptr };
+    const char* cms_settings[] = { "on", "off", "auto", nullptr };
+    const char* oplmodes[] = { "auto", "opl2", "dualopl2", "opl3", "opl3gold", "none", "hardware", "hardwaregb", "esfm", nullptr };
     const char* serials[] = { "dummy", "disabled", "modem", "nullmodem", "serialmouse", "directserial", "log", "file", nullptr };
     const char* acpi_rsd_ptr_settings[] = { "auto", "bios", "ebda", nullptr };
     const char* cpm_compat_modes[] = { "auto", "off", "msdos2", "msdos5", "direct", nullptr };
@@ -3669,10 +3670,18 @@ void DOSBOX_SetupConfigSections(void) {
     Pbool->Set_help("Allow the Sound Blaster mixer to modify the DOSBox-X mixer.");
     Pbool->SetBasic(true);
 
+    Pstring = secprop->Add_string("cms", Property::Changeable::WhenIdle, "auto");
+    Pstring->Set_values(cms_settings);
+    Pstring->Set_help(
+        "Enable CMS emulation ('auto' by default).\n"
+        "  off:   Disable CMS emulation (except when the Game Blaster is selected).\n"
+        "  on:    Enable CMS emulation on Sound Blaster 1 and 2.\n"
+        "  auto:  Auto-enable CMS emulation for Sound Blaster 1 and Game Blaster.");
+
     Pstring = secprop->Add_string("oplmode",Property::Changeable::WhenIdle,"auto");
     Pstring->Set_values(oplmodes);
     Pstring->Set_help("Type of OPL emulation. On 'auto' the mode is determined by the 'sbtype' setting.\n"
-			"All OPL modes are AdLib-compatible, except for 'cms' (set 'sbtype=none' with 'cms' for a Game Blaster).");
+            "All OPL modes are AdLib-compatible.");
     Pstring->SetBasic(true);
 
     Pbool = secprop->Add_bool("adlib force timer overflow on detect",Property::Changeable::WhenIdle,false);
