@@ -94,7 +94,8 @@ NEXT
     - properties/help: sorted alphabetically, mouse wheel scrollable
     - remove few rendundant labels, adjust names of some others
     - retain 'show advanced options' state throughout session
-  - SVN r4483: Fix compilation in Visual Studio 2008. (Allofich)
+  - SVN r4483: Fix compilation in Visual Studio 2008 (Allofich)
+  - DOSBox Staging: Decouple CMS and OPL emulations (Allofich)
 
 2024.07.01
   - Correct Hercules InColor memory emulation. Read and write planar
